--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <!doctype html>
-<html class="no-js services mobile" lang="EN">
+<html class="no-js services mobile" lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title></title>
+
+  <!-- language variations & switcher -->
+  <link rel="alternate" href="http://retronuevo.es/index.html" hreflang="en" />
+  <link rel="alternate" href="http://retronuevo.es/index_es.html" hreflang="x-default" />
+  <script>
+    var userLang = navigator.language ? navigator.language : navigator.userLanguage;
+    if ( userLang.substr(0,2) != 'en' ) {
+      window.location.replace("http://retronuevo.es/index_es.html");
+    }
+  </script>
+
+  <title>RETRO+NUEVO - making beautiful things from reclaimed materials</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
   <!-- Place favicon.ico in the root directory -->
   <link rel="stylesheet" href="css/style.css">
+
+
   <script>
     var isSafari = Object.prototype.toString.call(window.HTMLElement).indexOf('Constructor') > 0; //UA check for safari
     if (isSafari) {
