--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
   <script>
     var paramLang = location.search.split('lang')[1],
         browserLang = navigator.languages ? navigator.languages[0] : (navigator.language || navigator.userLanguage);
+
+    console.log(paramLang, browserLang);
+
     if ( paramLang ) {
       if ( paramLang !== "en" ) {
         window.location.replace("http://retronuevo.es/index_es.html?lang=es");
       }
-    } else if ( userLang.substr(0,2) != 'en' ) {
+    } else if ( userLang.substr(0,2) !== 'en' ) {
       window.location.replace("http://retronuevo.es/index_es.html?lang=es");
     }
   </script>
