--- a/index_es.html
+++ b/index_es.html
@@ -11,9 +11,6 @@
   <script>
     var paramLang = location.search.split('lang=')[1],
         browserLang = navigator.languages ? navigator.languages[0] : (navigator.language || navigator.userLanguage);
-
-    console.log("paramLang = ", paramLang, "browserLang = ", browserLang);
-
     if ( paramLang ) {
       if ( paramLang === "en" ) {
         window.location.replace("http://retronuevo.es/index.html?lang=en");
@@ -204,11 +201,10 @@
       <textarea name="message" row="5" placeholder="Message"></textarea>
       <input type="submit" class="button" value="Enviar mensaje">
     </form>
-    <p>&copy;2016 RETRO+NUEVO</p>
+    <p><span class="left">&copy;2016 RETRO+NUEVO</span><span class="right"><a href="http://retronuevo.es/index.html?lang=en">View in ENGLISH</a></span></p>
     <p class="credits">Créditos:</p>
     <p class="credits">Fotos por Kelly Lawlor y RETRO+NUEVO</p>
     <p class="credits">Página web por <a href="http://sidebarnone.com">sidebarnone.com</a></p>
-    <a href="http://retronuevo.es/index.html?lang=en">EN</a>
   </footer>
 
   <!--
