added meta tags for social sharing

--- a/index.html
+++ b/index.html
@@ -20,9 +20,18 @@
     }
   </script>
 
-  <title>RETRO+NUEVO - making beautiful things from reclaimed materials</title>
-  <meta name="description" content="">
+  <title>RETRO+NUEVO - making beautiful furniture from reclaimed Spanish materials</title>
+  <meta name="description" content="RETRO+NUEVO - making beautiful furniture from reclaimed Spanish materials">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta property="og:locale" content="en_GB">
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="RETRO+NUEVO">
+  <meta property="og:description" content="With imagination, skill, and love, we take remnants of Spanish architecture and repurpose them to make beautiful pieces of furniture.">
+  <meta property="og:url" content="http://retronuevo.es/">
+  <meta property="og:site_name" content="RETRO+NUEVO" />
+  <meta property="og:image" content="http://retronuevo.es/img/services8.jpg">
+
   <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
   <!-- Place favicon.ico in the root directory -->
   <link rel="stylesheet" href="css/style.css">
