--- a/index_es.html
+++ b/index_es.html
@@ -20,8 +20,17 @@
     }
   </script>
   <title>RETRO+NUEVO - obras bonitas hechos a mano de materiales recuperados</title>
-  <meta name="description" content="">
+  <meta name="description" content="RETRO+NUEVO - obras bonitas hechos a mano de materiales recuperados">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta property="og:locale" content="es_ES">
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="RETRO+NUEVO">
+  <meta property="og:description" content="Con imaginación, cuidado y amor recuperamos materiales de arquitectura española y con ellos hacemos muebles bellos.">
+  <meta property="og:url" content="http://retronuevo.es/index_es.html">
+  <meta property="og:site_name" content="RETRO+NUEVO" />
+  <meta property="og:image" content="http://retronuevo.es/img/services8.jpg">
+
   <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
   <!-- Place favicon.ico in the root directory -->
   <link rel="stylesheet" href="css/style.css">
