--- a/index_es.html
+++ b/index_es.html
@@ -7,6 +7,7 @@
 
   <!-- language variations & redirect -->
   <link rel="alternate" href="http://retronuevo.es/index.html" hreflang="en" />
+  <link rel="alternate" href="http://retronuevo.es/index_es.html" hreflang="es" />
   <link rel="alternate" href="http://retronuevo.es/index_es.html" hreflang="x-default" />
   <script>
     var paramLang = location.search.split('lang=')[1],
